{
  "version": 4,
  "terraform_version": "0.12.12",
  "serial": 113,
  "lineage": "9a310589-c635-930d-1c36-c813887bef7d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "example",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a4aa99940e671a70",
            "arn": "arn:aws:ec2:us-east-1:579667956740:instance/i-0daa7948c3593baef",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0daa7948c3593baef",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykeypair",
            "monitoring": false,
            "primary_network_interface_id": "eni-003d5122b2c10a6fc",
            "private_dns": "ip-10-0-1-23.ec2.internal",
            "private_ip": "10.0.1.23",
            "public_dns": "ec2-3-221-159-188.compute-1.amazonaws.com",
            "public_ip": "3.221.159.188",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-02c769fdb2db56016",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-003774ee097df5e21",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c822800a52e67f5f"
            ]
          },
          "depends_on": [
            "aws_key_pair.mykeypair",
            "aws_security_group.example-instance",
            "aws_subnet.main-public-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main-gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-04807fd73a1fca062",
            "owner_id": "579667956740",
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-0514a739d0a771bad"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-02ca5080827318b7b",
            "owner_id": "579667956740",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04807fd73a1fca062",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-public-1"
            },
            "vpc_id": "vpc-0514a739d0a771bad"
          },
          "depends_on": [
            "aws_internet_gateway.main-gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-1-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a5bb4cceee85a3e1",
            "route_table_id": "rtb-02ca5080827318b7b",
            "subnet_id": "subnet-003774ee097df5e21"
          },
          "depends_on": [
            "aws_route_table.main-public",
            "aws_subnet.main-public-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-2-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-057caed1da8d8f9f5",
            "route_table_id": "rtb-02ca5080827318b7b",
            "subnet_id": "subnet-0360637cb008beb6e"
          },
          "depends_on": [
            "aws_route_table.main-public",
            "aws_subnet.main-public-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-3-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08d3d7bbdabc195e8",
            "route_table_id": "rtb-02ca5080827318b7b",
            "subnet_id": "subnet-09474b16a2513c2a5"
          },
          "depends_on": [
            "aws_route_table.main-public",
            "aws_subnet.main-public-3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "example-instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:579667956740:security-group/sg-0c822800a52e67f5f",
            "description": "security group that allows ssh and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c822800a52e67f5f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-ssh",
            "name_prefix": null,
            "owner_id": "579667956740",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "example-instance"
            },
            "timeouts": null,
            "vpc_id": "vpc-0514a739d0a771bad"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:579667956740:subnet/subnet-0213b4aa5602a36b4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0213b4aa5602a36b4",
            "map_public_ip_on_launch": false,
            "owner_id": "579667956740",
            "tags": {
              "Name": "main-private-1"
            },
            "vpc_id": "vpc-0514a739d0a771bad"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:579667956740:subnet/subnet-0cf2339d48d4ab347",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-0cf2339d48d4ab347",
            "map_public_ip_on_launch": false,
            "owner_id": "579667956740",
            "tags": {
              "Name": "main-private-2"
            },
            "vpc_id": "vpc-0514a739d0a771bad"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:579667956740:subnet/subnet-0a15e2dfad85262bf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-0a15e2dfad85262bf",
            "map_public_ip_on_launch": false,
            "owner_id": "579667956740",
            "tags": {
              "Name": "main-private-3"
            },
            "vpc_id": "vpc-0514a739d0a771bad"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:579667956740:subnet/subnet-003774ee097df5e21",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-003774ee097df5e21",
            "map_public_ip_on_launch": true,
            "owner_id": "579667956740",
            "tags": {
              "Name": "main-public-1"
            },
            "vpc_id": "vpc-0514a739d0a771bad"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:579667956740:subnet/subnet-0360637cb008beb6e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0360637cb008beb6e",
            "map_public_ip_on_launch": true,
            "owner_id": "579667956740",
            "tags": {
              "Name": "main-public-2"
            },
            "vpc_id": "vpc-0514a739d0a771bad"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:579667956740:subnet/subnet-09474b16a2513c2a5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-09474b16a2513c2a5",
            "map_public_ip_on_launch": true,
            "owner_id": "579667956740",
            "tags": {
              "Name": "main-public-3"
            },
            "vpc_id": "vpc-0514a739d0a771bad"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:579667956740:vpc/vpc-0514a739d0a771bad",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a87cb4f367b6c39f",
            "default_route_table_id": "rtb-0fd52826f12948204",
            "default_security_group_id": "sg-00b1794ae8d78482a",
            "dhcp_options_id": "dopt-70e1e009",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0514a739d0a771bad",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0fd52826f12948204",
            "owner_id": "579667956740",
            "tags": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}